k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gourmet-greet
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
